@@ -3,6 +3,9 @@
 	* Move the client protocol data structure into client.c and provide cli_init(),
 	  cli_fini() interfaces to build/tear it down.
 	* Call yacc parser from config.c via conf_init() interface.
+	* Got rid of global g->specs.  It is now local to config.c and only exists during
+	  parsing.  Parser accesses list via conf_find_spec() and conf_add_spec() 
+	  accessors.
 
 2002-09-14 garlick
 	* Renamed functions to use lower case module prefix.
